Update src/main/java/com/exasol/adapter/jdbc/AbstractRemoteMetadataReader.java